# ScreenCaptureLib

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  HACKING.md  LICENSE  README.md  project-include-after.cmake
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
include/: basevideowriter.h  screenrecorder.h
include/ScreenCaptureLib/: ScreenCaptureLib.hpp  basevideowriter.hpp  screenrecorder.hpp
include/ScreenCaptureLib/defs/: scap_defs.hpp
include/utils/: lib_autolink_mm.h  lib_dll_helper.h  scap_defs.h
src/ScreenCaptureLib/: ScreenCaptureLib.cpp  screenrecorder.cpp
src/ScreenCaptureLib/grabber_backends/: basegrabber.h  sclitegrabber.cpp  sclitegrabber.h  xshmgrabber.cpp  xshmgrabber.h
src/ScreenCaptureLib/writer_backends/: basevideowriter.cpp  cvvideowriter.cpp  cvvideowriter.h  ffmpegvideowriter.cpp  ffmpegvideowriter.h  mfvideowriter.cpp  mfvideowriter.h
src/ScreenCaptureTest/: main.cpp
test/: CMakeLists.txt
test/source/: ScreenCaptureLib_test.cpp
